<resources>
    <string name="app_name">Fabler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="story">Your story</string>
    <string name="add_to_widget">ADD TO WIDGET</string>
    <string name="story_label">Story</string>
    <string name="drafts">Drafts</string>
    <string name="profile">Profile</string>
    <string name="loader_message">Loading Stories</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="publish">Publish</string>
    <string name="dialog_publish_title">Publish Story</string>
    <string name="dialog_publish_message">Sure you want to publish this story?</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_title">Delete Draft</string>
    <string name="dialog_delete_message">Sure you want to delete this draft?</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">10xxxxxx39</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbxxxxxx39</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!-- Welcome Screen -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Write Your Words</string>
    <string name="slide_1_desc">Fabler is a creative writing platform for passionate writers, poets, and readers!</string>
    <string name="slide_2_title">Explore Writers</string>
    <string name="slide_2_desc">Discover content created by writers around the world!</string>
    <string name="slide_3_title">A Good Read</string>
    <string name="slide_3_desc">For the readers who love reading stories, poems, quotes, and novels!</string>
    <string name="slide_4_title">Express Yourself!</string>
    <string name="slide_4_desc">Share your thoughts and emotions through your creative writings!</string>
    <string name="comments">Comments</string>
    <string name="compose">Compose</string>
    <string name="read">Read</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="by_author">By Author</string>
    <string name="sample_date">Sun May 05</string>
    <string name="sample_story">The engine came to a slow stop. Kevin got off and darted straight past the coffee shop to the ATM machine. Before checking how much he needed for the month he quickly peeked at his cellphone screen. The message counter was stuck at zero. Kevin calmly typed a message.</string>
    <string name="time">time</string>
    <string name="like_button">Like Button</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="profile_image">Profile Image</string>
    <string name="write_your_words_icon">Write Your Words Icon</string>
    <string name="explore_writers_icon">Explore writers icon</string>
    <string name="a_good_read_icon">A good read icon</string>
    <string name="express_yourself_icon">Express yourself icon</string>
    <string name="list_of_stories">List of stories</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="key_story_id">storyId</string>
    <string name="key_comments">comments</string>
    <string name="key_title">title</string>
    <string name="key_story">story</string>
    <string name="key_isEdited">edited</string>
    <string name="toast_message_draft">Story saved in Drafts!</string>
    <string name="guest">Guest</string>
    <string name="key_author">author</string>
    <string name="key_time">time</string>
    <string name="toast_message_widget">Story added to widget!</string>
    <string name="dots_text"><![CDATA[&#8226;]]></string>
    <string name="zero">0</string>
    <string name="toast_message_comment">Comment has been posted!</string>
    <string name="toast_message_story">Story has been published!</string>
    <string name="child_users">users</string>
    <string name="child_story">story</string>
    <string name="child_story_data">storyData</string>
    <string name="child_comment">comment</string>
    <string name="def_val_user_full_name">Guest</string>
    <string name="def_val_user_email">Guest@fabler.com</string>
    <string name="def_val_widget_story_title">Title</string>
    <string name="def_val_widget_author">Story</string>
    <string name="def_val_author">Author</string>
    <string name="category_label">Category</string>
    <string name="title_label">Title goes here</string>
    <string name="body_label">The story body goes here. It may be a long story, a short one or even
        a one liner. All depends on the author.</string>
    <string name="author_label">Author Name</string>
    <string name="date_label">27 Feb</string>
    <string name="dot">.</string>
    <string name="likes_count">16 likes</string>
    <string name="comment_count">4 comment</string>
    <string name="dot_symbol">.</string>
    <string name="comments_count">4 comments</string>
    <string name="story_thumbnail">Story Thumbnail</string>
    <string name="writing">WRITING</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="msg_bookmarked">Added to Bookmarks</string>
    <string name="msg_bookmark_removed">Bookmark removed</string>
    <string name="msg_draft_deleted">Draft Deleted!</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="add_image">Add image</string>
    <string name="story_image">Story Image</string>
    <string name="story_options">Story options</string>
    <string name="option_share">Share</string>
    <string name="label_collaborative">Collaborative</string>

</resources>
