<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTitle">

    <TextView
        android:id="@+id/tv_widget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="0dp"
        android:paddingBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorTitle"
        android:textStyle="bold"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_widget_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_widget_title"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorTitle"
        tools:text="@string/by_author" />

    <TextView
        android:id="@+id/tv_widget_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_widget_author"
        android:padding="16dp"
        android:text="@string/story_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lv_widget_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_widget_author"
        android:contentDescription="@string/list_of_stories"
        android:divider="@null" />

</RelativeLayout>