<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorEditTextBg"
            android:maxLines="3"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:background="@color/colorEditTextBg"
            android:maxLines="1"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            tools:text="@string/by_author" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_author"
            android:background="@color/colorEditTextBg"
            android:maxLines="1"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="@string/sample_date" />

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_time"
            android:layout_marginTop="10dp"
            android:background="@color/colorEditTextBg"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/story" />
    </RelativeLayout>
</ScrollView>