<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="24dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_person" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_bold"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textColor="@color/textDarkPrimary"
        android:textSize="@dimen/material_text_body3"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/muli_regular"
        android:textColor="@color/textDarkSecondary"
        android:textSize="@dimen/material_text_body1"
        tools:text="@string/email_address" />

</LinearLayout>