<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_home_item"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/iv_story_thumbnail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_story_item_image_outline"
        android:contentDescription="@string/story_thumbnail"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/tv_story_brief"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:srcCompat="@drawable/sample_image" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/story_item_padding"
        android:layout_marginTop="@dimen/story_item_padding"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/muli_light"
        android:text="@string/category_label"
        android:textAllCaps="true"
        android:textColor="@color/textDarkSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_story_thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/muli_bold"
        android:maxLines="2"
        android:text="@string/title_label"
        android:textAlignment="viewStart"
        android:textColor="@color/textDarkPrimaryLight"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_category"
        app:layout_constraintStart_toStartOf="@+id/tv_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_category" />

    <TextView
        android:id="@+id/tv_story_brief"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/muli_regular"
        android:maxLines="3"
        android:text="@string/body_label"
        android:textColor="@color/textDarkSecondary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_category"
        app:layout_constraintStart_toStartOf="@+id/tv_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/author_label"
        android:textAlignment="viewStart"
        android:textColor="@color/textAuthorName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_category"
        app:layout_constraintStart_toStartOf="@+id/tv_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_brief" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/muli_regular"
        android:gravity="bottom"
        android:text="@string/date_label"
        android:textColor="@color/textDarkTertiary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_label_collaborative"
        app:layout_constraintStart_toStartOf="@+id/tv_author"
        app:layout_constraintTop_toBottomOf="@+id/tv_author" />

    <TextView
        android:id="@+id/tv_dot_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/muli_regular"
        android:text="@string/dot_symbol"
        android:textAlignment="center"
        android:textColor="@color/textDarkTertiary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintStart_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toTopOf="@+id/tv_time" />

    <TextView
        android:id="@+id/tv_likes_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/muli_regular"
        android:gravity="bottom"
        android:text="@string/likes_count"
        android:textColor="@color/textDarkTertiary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintStart_toEndOf="@+id/tv_dot_1"
        app:layout_constraintTop_toTopOf="@+id/tv_time" />

    <TextView
        android:id="@+id/tv_dot_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/muli_regular"
        android:text="@string/dot_symbol"
        android:textAlignment="center"
        android:textColor="@color/textDarkTertiary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintStart_toEndOf="@+id/tv_likes_count"
        app:layout_constraintTop_toTopOf="@+id/tv_time" />

    <TextView
        android:id="@+id/tv_comments_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/muli_regular"
        android:gravity="bottom"
        android:text="@string/comments_count"
        android:textColor="@color/textDarkTertiary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintStart_toEndOf="@+id/tv_dot_2"
        app:layout_constraintTop_toTopOf="@+id/tv_time" />

    <com.like.LikeButton
        android:id="@+id/btn_bookmark"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        app:anim_scale_factor="10"
        app:icon_size="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_author"
        app:like_drawable="@drawable/ic_bookmark_fill"
        app:unlike_drawable="@drawable/ic_bookmark_outline" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorVeryVeryLightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/iv_story_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/story_options"
        android:src="@drawable/ic_dots_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_category" />

    <TextView
        android:id="@+id/tv_label_collaborative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_label_collaborative"
        android:fontFamily="@font/muli_regular"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/label_collaborative"
        android:textColor="@color/textDarkSecondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/tv_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

</androidx.constraintlayout.widget.ConstraintLayout>